// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`throwStartupFailedError > should handle multiple container IDs correctly 1`] = `
[Error: [app-compose] Application startup failed.
Required container(s) "container1,container2" did not up in stage "another-stage".

Startup Log:

  entities-stage: 
    allSucceeded: false
    containerStatuses: 
      container1: idle
      container2: pending


Recommendations:
- Verify if the container(s) "container1,container2" are truly required.
- If not, consider removing them from the required list in "up.required".
- Ensure all dependencies for the container(s) are correct and their logic works as expected.]
`;

exports[`throwStartupFailedError > should throw an error with the correct message 1`] = `
[Error: [app-compose] Application startup failed.
Required container(s) "test-container" did not up in stage "test-stage".

Startup Log:

  entities-stage: 
    allSucceeded: true
    containerStatuses: 
      entities: done

  notifications-stage: 
    allSucceeded: false
    containerStatuses: 
      notifications: fail


Recommendations:
- Verify if the container(s) "test-container" are truly required.
- If not, consider removing them from the required list in "up.required".
- Ensure all dependencies for the container(s) are correct and their logic works as expected.]
`;
